--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h3>Give us a call</h3>
+            <p> Mobile:9825364493</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#">Call To Action</a>
@@ -527,20 +527,20 @@
                 <p>Nashik,Maharashtra,India</p>
               
 
-              <div class="card">
-                <img src="assets/img/hero-bg.jpg" alt="John" style="width:100%">
+              <div class="card" style="width: 40rem;">
+                <img src="assets/img/harish.jpg" alt="John" style="width:100%">
                 <h1>Harish Sutar</h1>
                 <p class="title">CEO & Founder</p>
                 <p>Krishna Darshan Furnitures</p>
                 <p><a href="#"><i class="fa fa-linkedin"></i></a></p>
                 <p><a href="#"><i class="fa fa-facebook"></i></a></p>
-                <p><a href="#"><i class="contact">Contact:</i></a></p>
+                <p><a href="#"><i class="contact">Contact:9825364493</i></a></p>
               </div>
 
               
 
-              <div class="card">
-                <img src="assets/img/hero-bg.jpg" alt="John" style="width:100%">
+              <div class="card" style="width: 40rem;">
+                <img src="assets/img/pulkit.jpg" alt="John" style="width:100%">
                 <h1>Pulkit Sutar</h1>
                 <p class="title">CEO & Founder</p>
                 <p>Krishna Darshan Furnitures</p>
