--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">Tv sets</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">view 3</li>
+              <li data-filter=".filter-card">view 2</li>
+              <li data-filter=".filter-web">view 2</li>
             </ul>
           </div>
         </div>
@@ -443,6 +443,135 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- Start of image gallery-->
+<section><style>
+  div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
+  </style>
+  <div>
+    <h1>Modular kitchen</h1>
+  </div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g1.jpeg">
+    <img src="assets/gallery/g1.jpeg" alt="Cinque Terre" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g2.jpeg">
+    <img src="assets/gallery/g2.jpeg" alt="Forest" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g3.jpeg">
+    <img src="assets/gallery/g3.jpeg" alt="Northern Lights" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g4.jpg">
+    <img src="assets/gallery/g4.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g5.jpeg">
+    <img src="assets/gallery/g5.jpeg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g6.jpeg">
+    <img src="assets/gallery/g6.jpeg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g7.jpeg">
+    <img src="assets/gallery/g7.jpeg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g8.jpeg">
+    <img src="assets/gallery/g8.jpeg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g9.jpeg">
+    <img src="assets/gallery/g9.jpeg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g10.jpg">
+    <img src="assets/gallery/g10.jpg" alt="Mountains" width="600" height="400">
+  </a>
+ 
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g11.jpg">
+    <img src="assets/gallery/g11.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g12.jpg">
+    <img src="assets/gallery/g12.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g13.png">
+    <img src="assets/gallery/g13.png" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="assets/gallery/g14.jpg">
+    <img src="assets/gallery/g14.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  
+</div>
+
+</section>
+    
+
   
     <!-- ======= Faq Section ======= -->
     <section id="faq" class="faq">
@@ -541,7 +670,7 @@
 
               <div class="card">
                 <img class="img-responsive" src="assets/img/pulkit.jpg" alt="John" style="width:100%">
-                <h1>Pulkit Sutar</h1>
+                <h1>Rakesh Sutar</h1>
                 <p class="title">CEO & Founder</p>
                 <p>Krishna Darshan Furnitures</p>
                 <p><a href="#"><i class="fa fa-linkedin"></i></a></p>
@@ -569,11 +698,11 @@
       <h3>Krishna Darshan Furnitures</h3>
       <p>Place for all the furniture solutions</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="harishpawar9825"gmail.com" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="harishpawar9825"gmail.com" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="harishpawar9825"gmail.com" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="harishpawar9825"gmail.com" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="harishpawar9825"gmail.com" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       
       <div class="credits">
