modular kitchen photos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,100%,100%i,700,700i|Raleway:300,300i,400,400i,500,500i,100%,100%i,700,700i|Poppins:300,300i,400,400i,500,500i,100%,100%i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -449,7 +449,7 @@
     margin: 5px;
     border: 1px solid #ccc;
     float: left;
-    width: 180px;
+    width: 100%;
   }
   
   div.gallery:hover {
@@ -472,28 +472,28 @@
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g1.jpeg">
-    <img src="assets/gallery/g1.jpeg" alt="Cinque Terre" width="600" height="400">
+    <img src="assets/gallery/g1.jpeg" alt="Cinque Terre" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g2.jpeg">
-    <img src="assets/gallery/g2.jpeg" alt="Forest" width="600" height="400">
+    <img src="assets/gallery/g2.jpeg" alt="Forest" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g3.jpeg">
-    <img src="assets/gallery/g3.jpeg" alt="Northern Lights" width="600" height="400">
+    <img src="assets/gallery/g3.jpeg" alt="Northern Lights" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g4.jpg">
-    <img src="assets/gallery/g4.jpg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g4.jpg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
@@ -501,70 +501,70 @@
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g5.jpeg">
-    <img src="assets/gallery/g5.jpeg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g5.jpeg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g6.jpeg">
-    <img src="assets/gallery/g6.jpeg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g6.jpeg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g7.jpeg">
-    <img src="assets/gallery/g7.jpeg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g7.jpeg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g8.jpeg">
-    <img src="assets/gallery/g8.jpeg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g8.jpeg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g9.jpeg">
-    <img src="assets/gallery/g9.jpeg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g9.jpeg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g10.jpg">
-    <img src="assets/gallery/g10.jpg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g10.jpg" alt="Mountains" width="100%" height="400">
   </a>
  
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g11.jpg">
-    <img src="assets/gallery/g11.jpg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g11.jpg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g12.jpg">
-    <img src="assets/gallery/g12.jpg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g12.jpg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g13.png">
-    <img src="assets/gallery/g13.png" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g13.png" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
 
 <div class="gallery">
   <a target="_blank" href="assets/gallery/g14.jpg">
-    <img src="assets/gallery/g14.jpg" alt="Mountains" width="600" height="400">
+    <img src="assets/gallery/g14.jpg" alt="Mountains" width="100%" height="400">
   </a>
   
 </div>
