--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
               
 
               <div class="card">
-                <img src="assets/img/harish.jpg" alt="John" style="width:100%">
+                <img src="assets/img/pulkit (2).jpg" alt="John" style="width:100%">
                 <h1>Harish Sutar</h1>
                 <p class="title">CEO & Founder</p>
                 <p>Krishna Darshan Furnitures</p>
@@ -669,7 +669,7 @@
               
 
               <div class="card">
-                <img class="img-responsive" src="assets/img/pulkit.jpg" alt="John" style="width:100%">
+                <img class="img-responsive" src="assets/img/pulkit (1).jpg" alt="John" style="width:100%">
                 <h1>Rakesh Sutar</h1>
                 <p class="title">CEO & Founder</p>
                 <p>Krishna Darshan Furnitures</p>
